# HttpServer

./: .gitignore  CMakeLists.txt  ReadMe.md  build.sh  main.cpp
docker/arm32/: Dockerfile  run.sh
docker/arm64/: Dockerfile  run.sh
logs/: 2025-04-08_22-03-10_log.txt  2025-04-08_22-11-55_log.txt  2025-04-08_22-19-47_log.txt  2025-04-08_22-30-50_log.txt  2025-04-08_22-32-32_log.txt  2025-04-13_12-25-40_log.txt  2025-04-13_12-25-46_log.txt  2025-04-13_12-39-44_log.txt  2025-04-13_12-46-11_log.txt
src/http/: HttpHandler.cpp  HttpHandler.h  HttpServer.cpp  HttpServer.h  Router.cpp  Router.h  mongoose.c
src/thread/: TaskManager.cpp  TaskManager.h  ThreadPool.cpp  ThreadPool.h
src/utils/: Helper.cpp  Helper.h  LoggerManager.cpp  LoggerManager.h  NamedLogger.h
